syntax = "proto3";

option csharp_namespace = "eShop.IdentityAPI";

package IdentityAPI;

// The product service definition.
service Auth {
  // Sends a products
  rpc HandleLogin (LoginRequest) returns (LoginResponse);  
  rpc Logout (LogoutRequest) returns (LogoutResponse);
  rpc ValidToken (TokenRequest) returns (TokenResponse);
}

message LoginRequest {
	string email = 1;
	string password = 2;    
}

message LoginResponse {
	string id = 1;
	string fullName = 2;
	string token = 3;
}

message LogoutRequest{
	string token = 1;
}

message LogoutResponse{
}

message TokenRequest {
	string token = 1;
}

message TokenResponse {
	int64 id = 1;
	string externalId = 2;
	string UserType = 3;
	bool isValid = 4;
}