syntax = "proto3";

option csharp_namespace = "eShop.IdentityAPI";

package IdentityAPI;

// The product service definition.
service Customer {
  rpc GetCustomers (CustomerItemsRequest) returns (PaginatedCustomerResponse);
  rpc GetCustomer (CustomerItemRequest) returns (CustomerResponse);
  rpc AddCustomer (CustomerRequest) returns (CustomerResponse);
  rpc UpdateCustomer (CustomerUpdateRequest) returns (CustomerResponse);
  rpc DeleteCustomer (CustomerItemRequest) returns (CustomerResponse);
}


// The request message containing the Product overview filter
message CustomerItemsRequest {
	int32 pageSize = 1;
	int32 pageIndex = 2;
    string search = 3;
}

// The request message containing the Product overview detail
message PaginatedCustomerResponse {
	int32 pageIndex = 1;
	int32 pageSize = 2;
	int64 count = 3;
	repeated CustomerListResponse data = 4;
}

message CustomerListResponse {
  string id = 1;
  string name = 2;
  string email = 3;
  string address = 4;
}

message CustomerItemRequest {
	string id = 1;
}

message CustomerResponse {
  string id = 1;
  string name = 2;
  string email = 3;
  string contact_number = 4; 
  string line1 = 5;
  string line2 = 6;
  string city = 7;  
  string state = 8;
  string zipcode = 9;
  string full_address = 10;
}

message CustomerRequest {
  string name = 1;
  string email = 2;
  string contact_number = 3; 
  string line1 = 4;
  string line2 = 5;
  string city = 6;  
  string state = 7;
  string zipcode = 8;
  string password = 9;
}


message CustomerUpdateRequest {
 string id = 1;
  string name = 2;
  string email = 3;
  string contact_number = 4; 
  string line1 = 5;
  string line2 = 6;
  string city = 7;  
  string state = 8;
  string zipcode = 9;
}